--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,1 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <title>Secure Recycling Maintenance Tracking System</title>
-</head>
-
-<body>
-  <div class="app-wrapper"></div>
-</body>
-
-</html>
+<!doctype html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"><title>Secure Recycling Maintenance Tracking System</title><link rel="icon" href="/favicon.ico"><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"></head><body><div class="app-wrapper"></div><script defer="defer" src="/app-e5c3e6b1ad5cef605a06.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-c857adee5d695c2d3093.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-c857adee5d695c2d3093.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script></body></html>
