--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,24 @@
-<!doctype html><html><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/><title>Secure Recycling Maintenance Tracking System</title><link rel="icon" href="/favicon.ico"/><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"/><link rel="icon" href="/favicon.ico"/><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"/><link rel="icon" href="/favicon.ico"/><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"/><link rel="icon" href="/favicon.ico"/><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"/><link rel="icon" href="/favicon.ico"><link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-25631adf17695b7fccbb.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-440855f890d8c92631af.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-b1bbdf3eb8ed25a9e747.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><link href="/app-b1bbdf3eb8ed25a9e747.min.css" rel="stylesheet"></head><body><div class="app-wrapper"></div><script defer="defer" src="/app-e5c3e6b1ad5cef605a06.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-c857adee5d695c2d3093.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-c857adee5d695c2d3093.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-d20bf5009642907fbd7f.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-e6fc7f5921d8e3651b93.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-e6fc7f5921d8e3651b93.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-a033741c67a4388b2788.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-9b28787826c1f5293906.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script><script defer="defer" src="/app-9b28787826c1f5293906.min.js"></script><script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <title>Secure Recycling Maintenance Tracking System</title>
+    <link rel="icon" href="/favicon.ico" />
+    <link href="/app-f694304aba2d2665aab9.min.css" rel="stylesheet" />
+    <link href="/app-25631adf17695b7fccbb.min.css" rel="stylesheet" />
+    <link href="/app-440855f890d8c92631af.min.css" rel="stylesheet" />
+    <link href="/app-b1bbdf3eb8ed25a9e747.min.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="app-wrapper"></div>
+    <script defer="defer" src="/app-e5c3e6b1ad5cef605a06.min.js"></script>
+    <script defer="defer" src="/vendor-00f1dd05a3af1c340cfb.min.js"></script>
+    <script defer="defer" src="/app-c857adee5d695c2d3093.min.js"></script>
+  </body>
+</html>
